# archictecture

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
channels/: __init__.py  api.py  cli.py  telegram.py
config/: .env.example  __init__.py  settings.py
core/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py
docs/: ARCHITECTURE.md
memory/: __init__.py  db.py  journal.py  profile.py  session.py
observability/: __init__.py  logger.py  tracer.py
sandbox/: __init__.py  executor.py  permissions.py
tests/: __init__.py  test_graph.py
tools/: __init__.py  files.py  memory_tool.py  registry.py  tasks.py  terminal.py  web.py
